--- a/index.css
+++ b/index.css
@@ -43,7 +43,6 @@ flex-direction: column;
 
 .btn {
   cursor: pointer;
-  
 }
 
 
@@ -64,7 +63,6 @@ flex-direction: column;
 .js-weather__con{
   position: fixed;
   bottom : 0;
-  
   width: 200px;
   height: 30px;
   align-items: center;
@@ -89,4 +87,30 @@ flex-direction: column;
   to{
     opacity: 1;
   }
+}
+
+
+.js-toDoForm__box{
+  width: 300px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  box-shadow: 0px 5px 5px -3px ;
+  border-radius: 20px;
+}
+
+input:focus{
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  outline-width: 0;
+  background-color:transparent;
+}
+
+.js-toDoList{
+  box-shadow: 0px 5px 5px -3px ;
+  border-radius: 20px;
+  width: 250px;
+  justify-content: center;
 }
